--- a/about.html
+++ b/about.html
@@ -5,9 +5,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
     <style>
-      .container{
+      /* .container{
         background: url('./image/bg.png');
         height: 600px;
+      } */
+      body{
+        background: url('./image/bg.png');
       }
     </style>
 </head>
