--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <link rel="stylesheet" href="./css/index.css">
     <style>
   
-        .index_background{
+        /* .index_background{
   background: url('./image/bg.png');
   width: 1250px;
   height: 540px;
   object-fit: cover;
+} */
+body{
+    background: url('./image/bg.png');
+  width: 1250px;
+  height: 540px;
+  object-fit: cover;
 }
-
     </style>
 </head>
 <body>
@@ -29,8 +34,8 @@
     </div>
     <div class="index_background">
         <div class="introname">
-            <h1>Hi ALL</h1><br>
-            <h1>I AM GOKUL SURENDRAN</h1>
+            <h1>Hi all</h1><br>
+            <h1>I am GOKUL SURENDRAN</h1>
 
         </div>
     <div class="aboutbutton">
